# Am-Synth

./: Cargo.toml  README.md  filter.py
.github/workflows/: build.yml  rust.yml
nih_plug_vizia/: Cargo.toml
src/: envelope.rs  filter.rs  gui.rs  lib.rs  params.rs  util.rs
src/bridge/: am.rs
