[package]
name = "am_synth"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", features = ["assert_process_allocs", "standalone"] }
nih_plug_vizia = { path = "nih_plug_vizia" }
vizia = "0.1.0"

[workspace]
members = ["xtask"]
